[package]
name = "controller"
version = "0.1.0"
edition = "2021"

[[bin]]
doc = false
name = "controller"
path = "src/main.rs"

[[bin]]
doc = false
name = "crdgen"
path = "src/crdgen.rs"

[[bin]]
doc = false
name = "certgen"
path = "src/certgen.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.48"
rstest = "0.18.2"
tokio = { version = "=1.32.0", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["net"] }
tokio-util = { version = "0.7.8", features = ["codec"] }
tokio-io = "0.1.13"
futures = "0.3.28"
serde = { version = "1.0.188", features = ["derive"] }
serde_yaml = "0.9"
kube = { version = "0.86.0", features = ["runtime", "derive", "admission", "rustls-tls"] }
k8s-openapi = { version = "0.20.0", features = ["latest"] }
serde_json = "1.0.107"
schemars = "0.8.13"
actix-web = { version = "4.4.0", features = ["rustls-0_21"] }
prometheus = "0.13.3"
chrono = "0.4.31"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["json", "env-filter"] }
tracing-futures = "0.2.5"
anyhow = "1.0.75"
tracing-opentelemetry = "0.21.0"
opentelemetry = { version = "0.20.0", features = ["trace", "rt-tokio"] }
opentelemetry-otlp = { version = "0.13.0", features = ["tokio"], optional = true }
tonic = "0.10.0"
prost = "0.12.1"
prost-types = "0.12.1"
tonic-reflection = "0.10.0"
async-trait = "0.1.73"
clap = { version = "4.4.4", features = ["derive"] }
rustls = "0.21.7"
rustls-pemfile = "1.0.3"
rcgen = "0.11.1"
time = "0.3.28"

[build-dependencies]
tonic-build = {version = "0.10.0", features = ["prost"]}
