[package]
name = "sart"
version = "0.0.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.38"
clap = { version = "4.1.6", features = ["derive"] }
tonic = "0.8.3"
prost = "0.11.6"
prost-types = "0.11.6"
tokio = { version = "=1.21.1", features = ["full"] }
serde = { version = "1.0.93", features = ["derive"] }
serde_json = "1.0.93"
tabled = "0.10.0"

[build-dependencies]
tonic-build = {version = "0.8.4", features = ["prost"]}
prost-build = {version = "0.11.6"}
