[package]
name = "sart-cni"
version = "0.6.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert-json-diff = "2.0.2"
built = { version = "0.7.1", features = [
	"git2",
	"semver",
	"dependency-tree",
	"chrono",
] }
bytes = "1.5.0"
ipnet = "2.9.0"
rstest = "0.18.2"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
thiserror = "1.0.56"
tracing = "0.1.40"
tonic-build = "0.10.2"
tonic = "0.10.2"
prost = "0.12.3"
prost-types = "0.12.3"
tokio = { version = "1.35.1", features = ["time", "rt-multi-thread", "macros"] }
rscni = { git = "https://github.com/terassyi/rscni", branch = "fix-error-result", features = [
	"async",
] }
tokio-stream = { version = "0.1.14", features = ["net"] }

[build-dependencies]
built = "0.7.1"
tonic-build = { version = "0.10.2", features = ["prost"] }
prost-build = { version = "0.12.3" }
