[package]
name = "sartd"
version = "0.0.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.38"
rstest = "0.15.0"
tokio = { version = "=1.21.1", features = ["full"] }
tokio-stream = { version = "0.1.10", features = ["net"] }
tokio-util = { version = "0.7.4", features = ["codec"] }
tokio-io = "0.1.13"
futures = "0.3.24"
serde = { version = "1.0.93", features = ["derive"] }
serde_yaml = "0.9"
clap = { version = "4.1.6", features = ["derive"] }
bytes = "1.2"
byteorder = "1.4"
ipnet = "2.5.0"
socket2 = "0.4.7"
tonic = "0.8.3"
prost = "0.11.6"
prost-types = "0.11.6"
tonic-reflection = "0.5.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["json"] }
tracing-futures = "0.2.5"
rtnetlink = "0.12.0"
netlink-packet-route = { version = "0.15.0", features = ["rich_nlas"] }
netlink-proto = "0.11.1"
netlink-sys = "0.8.5"
netlink-packet-core = "0.5.0"
netns-rs = "0.1.0"

[build-dependencies]
tonic-build = {version = "0.8.4", features = ["prost"]}

[patch.crates-io]
netlink-packet-route = { git = "https://github.com/terassyi/netlink-packet-route", branch = "next-hop-default" }
