[package]
name = "sartd"
version = "0.0.6"
edition = "2021"

[worksapce]
members = [
	"sartd/bgp",
	"sartd/cert",
	"sartd/cmd",
	"sartd/fib",
	"sartd/ipam",
	"sartd/kubernetes",
	"sartd/mock",
	"sartd/proto",
	"sartd/trace",
	"sartd/util",
]

[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=mold"]

[target.aarch64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=mold"]

[[bin]]
doc = false
name = "sartd"
path = "src/bin/sartd.rs"

[[bin]]
doc = false
name = "crdgen"
path = "src/bin/crdgen.rs"

[[bin]]
doc = false
name = "certgen"
path = "src/bin/certgen.rs"


[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.8", features = ["derive"] }
kube = { version = "0.87.1" }
k8s-openapi = { version = "0.20.0", features = ["v1_28"] }
# rcgen = "0.11.3"
rcgen = "0.12.0"
serde_yaml = "0.9.27"
time = "0.3.30"
sartd-cmd = { path = "src/cmd" }
sartd-kubernetes = { path = "src/kubernetes" }

[patch.crates-io]
# netlink-packet-route = { git = "https://github.com/terassyi/netlink-packet-route", branch = "next-hop-default", features = [
# 	"rich_nlas",
# ] }
netlink-packet-route = { git = "https://github.com/terassyi/netlink-packet-route", branch = "next-hop-default" }
