[package]
name = "sartd-bgp"
version = "0.0.5"
edition = "2021"

[dependencies]
byteorder = "1.5.0"
bytes = "1.5.0"
futures = "0.3.29"
ipnet = "2.9.0"
prost = "0.12.1"
prost-types = "0.12.1"
rstest = "0.18.2"
serde = { version = "1.0.192", features = ["derive"] }
serde_yaml = "0.9.27"
socket2 = "0.5.5"
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = ["time", "sync", "net", "macros", "test-util"] }
tokio-stream = { version = "0.1.14", features = ["net"] }
tokio-util = { version = "0.7.10", features = ["codec"] }
tonic = "0.10.2"
tracing = "0.1.40"
tracing-futures = "0.2.5"
sartd-proto = { path = "../proto" }
sartd-trace = { path = "../trace" }
sartd-util = { path = "../util" }
