[package]
name = "sartd-fib"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.29"
ipnet = "2.9.0"
netlink-packet-core = "0.7.0"
netlink-packet-route = { version = "0.17.1", features = [
	"rich_nlas",
] } # Ignore 0.18.x
netlink-sys = "0.8.5"
rtnetlink = "0.13.1" # Ignore 0.14.x
serde = { version = "1.0.193", features = ["derive"] }
thiserror = "1.0.53"
tokio = { version = "1.35.1", features = ["sync", "time"] }
tokio-stream = { version = "0.1.14", features = ["net"] }
tonic = "0.10.2"
tracing = "0.1.40"
sartd-proto = { path = "../proto" }
sartd-trace = { path = "../trace" }
serde_yaml = "0.9.29"

[patch.crates-io]
netlink-packet-route = { git = "https://github.com/terassyi/netlink-packet-route", branch = "next-hop-default", features = [
	"rich_nlas",
] }
