[package]
name = "sartd-kubernetes"
version = "0.0.5"
edition = "2021"

[dependencies]
chrono = "0.4.31"
ipnet = "2.9.0"
k8s-openapi = { version = "0.20.0", features = ["schemars", "v1_28"] }
kube = { version = "0.87.1", features = ["runtime", "derive", "admission", "rustls-tls", "client"] }
prometheus = "0.13.3"
schemars = "0.8.16"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = ["rt-multi-thread"] }
tracing = "0.1.40"
sartd-trace = { path = "../trace" }
serde_yaml = "0.9.27"
tonic = "0.10.2"

sartd-cert = { path = "../cert" }
sartd-proto = { path = "../proto" }
sartd-ipam = { path = "../ipam" }
futures = "0.3.29"
rtnetlink = "0.13.1"
actix-web = { version = "4.4.0", features = ["rustls-0_21"] }
rustls = "0.21.8"
rstest = "0.18.2"
json-patch = "1.2.0"
