[package]
name = "sartd-trace"
version = "0.0.5"
edition = "2021"

[dependencies]
k8s-openapi = { version = "0.20.0", features = ["v1_28"] }
kube = { version = "0.87.1", features = [] }
opentelemetry = { version = "0.21.0", features = ["trace"] }
prometheus = "0.13.3"
tokio = { version = "1.34.0", features = ["time"] }
tracing = "0.1.40"
tracing-opentelemetry = "0.22.0"
tracing-subscriber = { version = "0.3.17", features = ["json", "env-filter"] }
